chore: Refactor InitializeRestauranteRunner to improve code readability and maintainability